{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 47,
  "lineage": "f9c02351-9b7c-2220-4f21-ca44042742eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5a61bd1c1760051",
            "arn": "arn:aws:ec2:us-east-1:860839673297:elastic-ip/eipalloc-0b5a61bd1c1760051",
            "association_id": "eipassoc-013fcf9be74853038",
            "domain": "vpc",
            "id": "eipalloc-0b5a61bd1c1760051",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cb36112c310be7d7",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_ip": "10.0.1.253",
            "public_dns": "ec2-44-197-17-187.compute-1.amazonaws.com",
            "public_ip": "44.197.17.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imran-nat-eip",
              "Owner": "Imran Shaikh"
            },
            "tags_all": {
              "Name": "imran-nat-eip",
              "Owner": "Imran Shaikh"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "imran_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:internet-gateway/igw-0f7d4782bf9c9003e",
            "id": "igw-0f7d4782bf9c9003e",
            "owner_id": "860839673297",
            "tags": {
              "Name": "imran-eks-igw",
              "Owner": "Imran Shaikh"
            },
            "tags_all": {
              "Name": "imran-eks-igw",
              "Owner": "Imran Shaikh"
            },
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.imran_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "imran_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b5a61bd1c1760051",
            "association_id": "eipassoc-013fcf9be74853038",
            "connectivity_type": "public",
            "id": "nat-0c9149d60766127b6",
            "network_interface_id": "eni-0cb36112c310be7d7",
            "private_ip": "10.0.1.253",
            "public_ip": "44.197.17.187",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b3cd52f23dffdaa7",
            "tags": {
              "Name": "imran-nat-gateway",
              "Owner": "Imran Shaikh"
            },
            "tags_all": {
              "Name": "imran-nat-gateway",
              "Owner": "Imran Shaikh"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:route-table/rtb-0af6732d52b2908f9",
            "id": "rtb-0af6732d52b2908f9",
            "owner_id": "860839673297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c9149d60766127b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "imran-private-rt",
              "Owner": "Imran Shaikh"
            },
            "tags_all": {
              "Name": "imran-private-rt",
              "Owner": "Imran Shaikh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.imran_nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:route-table/rtb-0c192531f12b5000c",
            "id": "rtb-0c192531f12b5000c",
            "owner_id": "860839673297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7d4782bf9c9003e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "imran-public-rt",
              "Owner": "Imran Shaikh"
            },
            "tags_all": {
              "Name": "imran-public-rt",
              "Owner": "Imran Shaikh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.imran_igw",
            "aws_vpc.imran_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d878d3beed042bd8",
            "route_table_id": "rtb-0af6732d52b2908f9",
            "subnet_id": "subnet-065cc542a2ea2338e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.imran_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06644b4aa18e7eef8",
            "route_table_id": "rtb-0af6732d52b2908f9",
            "subnet_id": "subnet-079564db33067c4da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.imran_nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b957fa65ab9fa9",
            "route_table_id": "rtb-0c192531f12b5000c",
            "subnet_id": "subnet-0b3cd52f23dffdaa7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.imran_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d47d836046069b96",
            "route_table_id": "rtb-0c192531f12b5000c",
            "subnet_id": "subnet-04545412003d59291"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.imran_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:security-group/sg-0d9471496e28b2acb",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9471496e28b2acb",
            "ingress": [],
            "name": "imran-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "860839673297",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "imran-eks-cluster-sg",
              "Owner": "Imran Shaikh"
            },
            "tags_all": {
              "Name": "imran-eks-cluster-sg",
              "Owner": "Imran Shaikh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.imran_eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:subnet/subnet-065cc542a2ea2338e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065cc542a2ea2338e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "860839673297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imran-private-subnet-1",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imran-private-subnet-1",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:subnet/subnet-079564db33067c4da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079564db33067c4da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "860839673297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imran-private-subnet-2",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imran-private-subnet-2",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:subnet/subnet-0b3cd52f23dffdaa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3cd52f23dffdaa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "860839673297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imran-public-subnet-1",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imran-public-subnet-1",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:subnet/subnet-04545412003d59291",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04545412003d59291",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "860839673297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imran-public-subnet-2",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imran-public-subnet-2",
              "Owner": "Imran Shaikh",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b49ac37a6047fdd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.imran_eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imran_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:860839673297:vpc/vpc-0b49ac37a6047fdd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed3a4bd04d187c39",
            "default_route_table_id": "rtb-09d13a3863432f60f",
            "default_security_group_id": "sg-08ecf7db283b05393",
            "dhcp_options_id": "dopt-0f6d62a924c18af54",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b49ac37a6047fdd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d13a3863432f60f",
            "owner_id": "860839673297",
            "tags": {
              "Name": "imran-eks-vpc",
              "Owner": "Imran Shaikh",
              "kubernetes.io/cluster/imran-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "imran-eks-vpc",
              "Owner": "Imran Shaikh",
              "kubernetes.io/cluster/imran-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}